@@ -19,7 +19,7 @@ includeHtmlWrap("wrapper.header");
 
 if(!includeTemplate('photo.header.tpl')) {
 ?>
-<table width="100%" border="0">
+<table width="100%" border="0" cellpadding="0" cellspacing="0">
   <tr>
     <td>
       <table cellpadding="0" cellspacing="0" width="100%" border="0" align="center" class="mod_headliner">
