@@ -429,7 +429,7 @@ a.modcaption:hover {
 	 {
 	   text-align:center;
 	   font-size: 12px;
-	   font-weight: none;
+	   font-weight: normal;
 	   color: #202020;
 	   padding: 5px;
 	   border: 1px solid #000000;
@@ -440,7 +440,7 @@ a.modcaption:hover {
 .popupform /* controls form textarea */
 	 {
 	   font-size: 12px;
-	   font-weight: none;
+	   font-weight: normal;
 	   line-height: 120%;
 	   color: #202020;
 	   padding: 2px;
