@@ -445,7 +445,7 @@ input:focus {
 	 {
 	   text-align:center;
 	   font-size: 12px;
-	   font-weight: none;
+	   font-weight: normal;
 	   color: #202020;
 	   padding: 5px;
 	   border: 1px solid #000000;
@@ -456,7 +456,7 @@ input:focus {
 .popupform /* controls form textarea */
 	 {
 	   font-size: 12px;
-	   font-weight: none;
+	   font-weight: normal;
 	   line-height: 120%;
 	   color: #202020;
 	   padding: 2px;
