@@ -271,7 +271,7 @@ A:hover	{ color: #202020; }
 .popup
 	{
 	  font-size: 12px;
-	  font-weight: none;
+	  font-weight: normal;
 	  color: #202020;
 	  padding: 5px;
 	  border: 1px solid #000000;
@@ -281,7 +281,7 @@ A:hover	{ color: #202020; }
 .popupform
 	{
 	  font-size: 12px;
-	  font-weight: none;
+	  font-weight: normal;
 	  line-height: 120%;
 	  color: #202020;
 	  padding: 2px;
